--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,15 @@ services:
       - mysql_data:/var/lib/mysql
       - ./sql:/docker-entrypoint-initdb.d
 
+  redis:
+    image: redis/redis-stack
+    ports:
+      - "6379:6379"
+
+  redis-insight:
+    image: redis/redisinsight:latest
+    container_name: redis_insight
+    ports:
+      - "5540:5540"
 volumes:
   mysql_data:
